[tool.poetry]
name = "tortoise-fastapi-example"
version = "0.1.0"
description = ""
authors = ["augustin <azzerty23@hotmail.fr>"]
readme = "README.md"
packages = [{include = "tortoise_fastapi_example"}]

[tool.poetry.dependencies]
python = "^3.12"
tortoise-orm = "^0.21.7"
anyio = "^4.6.2.post1"
pytest = "^8.3.3"
pytz = "^2024.2"
asgi-lifespan = "^2.1.0"
httpx = "^0.27.2"
starlette = "^0.40.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
